--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "4.0.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/talut/react-native-pin-view.git"
+    "url": "git+https://github.com/impelsystems/react-native-pin-view.git"
   },
-  "publishConfig": {"registry": "https://npm.pkg.github.com/@talut"},
   "description": "React Native Pin View Component for Protection",
   "keywords": [
     "react-native",
@@ -31,10 +30,10 @@
   "author": "Talut Tasgiran",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/talut/react-native-pin-view/issues"
+    "url": "https://github.com/impelsystems/react-native-pin-view/issues"
   },
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
-  "homepage": "https://github.com/talut/react-native-pin-view"
+  "homepage": "https://github.com/impelsystems/react-native-pin-view"
 }
